# sanskrit_tts

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build_and_test.yml  python-publish.yml
app_engine/: api_v1.py  app.yaml  main.py  requirements.txt  test_bhashini_proxy_api.py
sanskrit_tts/: __init__.py  base.py  bhashini.py  bhashini_tts.py  gcloud_tts.py  util.py
test/: test_tts.py
