[metadata]
name = sanskrit_tts
author = Avinash Varna
description = A simple python library for converting Sanskrit text to speech.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/avinashvarna/sanskrit_tts
project_urls =
    Bug Tracker = https://github.com/avinashvarna/sanskrit_tts/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
	Development Status :: 3 - Alpha


[options]
install_requires =
  google-cloud-texttospeech
  indic_transliteration
  pydub
  requests

packages = find:

[options.packages.find]
exclude = 
  test
  app_engine
